--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  sqflite: ^1.3.0
-  path_provider: ^1.6.5
+  sqflite: ^1.3.1+1
+  path_provider: ^1.6.14
   dart_random_choice: ^0.0.2
   page_transition: ^1.1.5
-  firebase_admob: ^0.9.3+2
+  firebase_admob: ^0.9.3+4
 
 dev_dependencies:
   flutter_test:
